Sat Sep 17 23:34:10 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_data_type): inherit the core type in ripper so
	  that checks in core would work.  [ruby-core:39591] [Bug #5331]

Sat Sep 17 12:44:04 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* lib/find.rb (Find.find): add documentation that Find.find
	  without block returns an enumerator.

Thu Sep 15 11:39:43 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (mark_entry, mark_key, mark_keyvalue): adjust callback
	  argument types.

Thu Sep 15 01:44:10 2011  Ayumu AIZAWA  <ayumu.aizawa@gmail.com>

	* ext/tk/*: Change encoding from EUC-JP to UTF-8

Wed Sep 14 11:43:37 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_fd_rcopy): added an argument guard.
	  Patch by NAKAMURA Usaku. [Bug #5306] [ruby-core:39435]

Tue Sep 13 20:21:49 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/pstore.rb, test/test_pstore.rb: suppress warnings with -v.

	* lib/pstore.rb (PStore): always open in binary mode even if
	  default encodings are set.  [Bug #5311] [ruby-core:39503]

Tue Sep 13 05:37:15 2011  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (Init_IO): update BINARY comment.  it should not change the
	  encoding of the result to ASCII-8BIT.  [ruby-talk:387719]

Mon Sep 12 19:55:00 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_thread_select): fix to ignore an argument
	  modification of rb_thread_fd_select().
	  based on a patch by Eric Wong. [Bug #5306] [ruby-core:39435]
	* thread.c (rb_fd_rcopy): New. for reverse fd copy.

	* test/-ext-/old_thread_select/test_old_thread_select.rb
	(test_old_select_false_positive): test for bug5306.

	* ext/-test-/old_thread_select/old_thread_select.c (fdset2array):
	  New. convert fdsets to array.
	* ext/-test-/old_thread_select/old_thread_select.c (old_thread_select):
	  return 'read', 'write', 'except' argument of rb_thread_select()
	  to ruby script.

Mon Sep 12 13:38:12 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>
